...
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.spacedBy(10.dp, Alignment.CenterVertically),
        modifier = Modifier
            .fillMaxSize()
    ) {
        Text(
            text = "Current Location:",
            fontSize = 26.sp
        )
        Text(
            text = locationOptions[vm.currentLocationIndex.value],
            fontSize = 26.sp,
            fontWeight = FontWeight.Bold
...
