...
    Column(
        horizontalAlignment = Alignment.CenterHorizontally,
        modifier = Modifier
            .fillMaxSize()
    ) {
        Text(
            text = "48-Hour Forecast",
            fontSize = 30.sp,
            modifier = Modifier
                .padding(top = 10.dp, bottom = 10.dp)
        )
        when (val hourlyData = vm.hourlyWeatherData.value) {
            is WeatherDataResult.Loading -> {
...
